--- a/index.html
+++ b/index.html
@@ -3,40 +3,43 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scal=1">
     <title>Document</title>
     <link rel="stylesheet" href="https://maxst.icons8.com/vue-static/landings/line-awesome/line-awesome/1.3.0/css/line-awesome.min.css">
     <link rel="stylesheet" href="css/index.css">
     <link rel="stylesheet" href="css/sidebar.css">
     <link rel="stylesheet" href="css/header.css">
+    <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="css/rwd.css">
 </head>
 <body>
+    <input type="checkbox" name="" id="nav-toggle">
     <div class="sidebar">
         <div class="sidebar-brand">
-            <h2><span class="lab la-accusoft"></span>Accusoft</h2>
+            <h2><span class="lab la-accusoft"></span><span>Accusoft</span></h2>
         </div>
         <div class="sidebar-menu">
             <ul>
                 <li>
-                    <a href=""><span class="las la-igloo">Dashboard</span></a>
+                    <a href=""><span class="las la-igloo"></span><span>Dashboard</span></a>
                 </li>
                 <li>
-                    <a href=""><span class="las la-users">Customers</span></a>
+                    <a href="" class="active"><span class="las la-users"></span><span>Customers</span></a>
                 </li>
                 <li>
-                    <a href="" class="active"><span class="las la-clipboard-list">Projects</span></a>
+                    <a href=""><span class="las la-clipboard-list"></span><span>Projects</span></a>
                 </li>
                 <li>
-                    <a href=""><span class="las la-shopping-bag">Orders</span></a>
+                    <a href=""><span class="las la-shopping-bag"></span><span>Orders</span></a>
                 </li>
                 <li>
-                    <a href=""><span class="las la-receipt">Inventory</span></a>
+                    <a href=""><span class="las la-receipt"></span><span>Inventory</span></a>
                 </li>
                 <li>
-                    <a href=""><span class="las la-user-circle">Account</span></a>
+                    <a href=""><span class="las la-user-circle"></span><span>Account</span></a>
                 </li>
                 <li>
-                    <a href=""><span class="las la-clipboard-list">Tasks</span></a>
+                    <a href=""><span class="las la-clipboard-list"></span><span>Tasks</span></a>
                 </li>
             </ul>
         </div>
@@ -45,16 +48,15 @@
     <div class="main-content">
         <header>
             <h3>
-                <label for="">
-                    <span class="las la-bars"></span>Dashboard
+                <label for="nav-toggle">
+                    <span class="las la-bars"></span>
                 </label>
+                Dashboard
             </h3>
-
             <div class="search-wrapper">
                 <span class="las la-search"></span>
                 <input type="search" name="" placeholder="Search" id="">
             </div>
-
             <div class="user-wrapper">
                 <img src="img/2.jpg" style="width: 40px; height:40px" alt="">
                 <div>
@@ -63,7 +65,6 @@
                 </div>
             </div>
         </header>
-
         <main>
             <div class="cards">
                 <div class="card-single">
@@ -99,11 +100,178 @@
                         <span>Income</span>
                     </div>
                     <div>
-                        <span class="las la-google-wallet"> </span>
+                        <span class="lab la-google-wallet"> </span>
                     </div>
                 </div>
             </div>
-        </main>
+
+            <div class="recent-grid">
+                <div class="projects">
+                    <div class="card">
+                        <div class="card-header">
+                            <h2>Recent Projects</h2>
+                            <button>See all <span class="las la-arrow-right"></span></button>
+                        </div>
+                        <div class="card-body">
+                            <div class="table-responsive">
+                                <table width="100%">
+                                    <thead>
+                                        <tr>
+                                            <td>Projects Titles</td>
+                                            <td>Department</td>
+                                            <td>Status</td>
+                                        </tr>
+                                    </thead>
+                                    <tbody>
+                                        <tr>
+                                            <td>UI/UX D</td>
+                                            <td>UI Team</td>
+                                            <td><span class="status purple"></span>review</td>
+                                        </tr>
+                                        <tr>
+                                            <td>Web development</td>
+                                            <td>Frontend</td>
+                                            <td><span class="status pink"></span>in progess</td>
+                                        </tr>
+                                        <tr>
+                                            <td>Ushop app</td>
+                                            <td>Mobile Team</td>
+                                            <td><span class="status orange"></span>pending</td>
+                                        </tr>
+                                        <tr>
+                                            <td>UI/UX D</td>
+                                            <td>UI Team</td>
+                                            <td><span class="status purple"></span>review</td>
+                                        </tr>
+                                        <tr>
+                                            <td>Web development</td>
+                                            <td>Frontend</td>
+                                            <td><span class="status pink"></span>in progess</td>
+                                        </tr>
+                                        <tr>
+                                            <td>Ushop app</td>
+                                            <td>Mobile Team</td>
+                                            <td><span class="status orange"></span>pending</td>
+                                        </tr>
+                                        <tr>
+                                            <td>UI/UX D</td>
+                                            <td>UI Team</td>
+                                            <td><span class="status purple"></span>review</td>
+                                        </tr>
+                                        <tr>
+                                            <td>Web development</td>
+                                            <td>Frontend</td>
+                                            <td><span class="status pink"></span>in progess</td>
+                                        </tr>
+                                        <tr>
+                                            <td>Ushop app</td>
+                                            <td>Mobile Team</td>
+                                            <td><span class="status orange"></span>pending</td>
+                                        </tr>
+                                        <tr>
+                                            <td>UI/UX D</td>
+                                            <td>UI Team</td>
+                                            <td><span class="status purple"></span>review</td>
+                                        </tr>
+                                        <tr>
+                                            <td>Web development</td>
+                                            <td>Frontend</td>
+                                            <td><span class="status pink"></span>in progess</td>
+                                        </tr>
+                                        <tr>
+                                            <td>Ushop app</td>
+                                            <td>Mobile Team</td>
+                                            <td><span class="status oragne"></span>pending</td>
+                                        </tr>
+                                    </tbody>
+                                </table>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="customers">
+                    <div class="card">
+                        <div class="card-header">
+                            <h2>Recent Projects</h2>
+                            <button>See all <span class="las la-arrow-right"></span></button>
+                        </div>
+                        <div class="card-body">
+                            <div class="customer">
+                                <div class="info">
+                                    <img src="img/2.jpg" width="40px" height="40px" alt="">
+                                    <div>
+                                        <h4>Lewis s. Cummingham</h4>
+                                        <small>CEO Excerpt</small>
+                                    </div>
+                                </div>
+                                <div class="content">
+                                    <span class="las la-user-circle"></span>
+                                    <span class="las la-comment"></span>
+                                    <span class="las la-phone"></span>
+                                </div>
+                            </div>
+                            <div class="customer">
+                                <div class="info">
+                                    <img src="img/2.jpg" width="40px" height="40px" alt="">
+                                    <div>
+                                        <h4>Lewis s. Cummingham</h4>
+                                        <small>CEO Excerpt</small>
+                                    </div>
+                                </div>
+                                <div class="content">
+                                    <span class="las la-user-circle"></span>
+                                    <span class="las la-comment"></span>
+                                    <span class="las la-phone"></span>
+                                </div>
+                            </div>
+                            <div class="customer">
+                                <div class="info">
+                                    <img src="img/2.jpg" width="40px" height="40px" alt="">
+                                    <div>
+                                        <h4>Lewis s. Cummingham</h4>
+                                        <small>CEO Excerpt</small>
+                                    </div>
+                                </div>
+                                <div class="content">
+                                    <span class="las la-user-circle"></span>
+                                    <span class="las la-comment"></span>
+                                    <span class="las la-phone"></span>
+                                </div>
+                            </div>
+                            <div class="customer">
+                                <div class="info">
+                                    <img src="img/2.jpg" width="40px" height="40px" alt="">
+                                    <div>
+                                        <h4>Lewis s. Cummingham</h4>
+                                        <small>CEO Excerpt</small>
+                                    </div>
+                                </div>
+                                <div class="content">
+                                    <span class="las la-user-circle"></span>
+                                    <span class="las la-comment"></span>
+                                    <span class="las la-phone"></span>
+                                </div>
+                            </div>
+                            <div class="customer">
+                                <div class="info">
+                                    <img src="img/2.jpg" width="40px" height="40px" alt="">
+                                    <div>
+                                        <h4>Lewis s. Cummingham</h4>
+                                        <small>CEO Excerpt</small>
+                                    </div>
+                                </div>
+                                <div class="content">
+                                    <span class="las la-user-circle"></span>
+                                    <span class="las la-comment"></span>
+                                    <span class="las la-phone"></span>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </main>    
+
     </div>
 </body>
 </html> 
